# agent-aquila

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  recompose.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agent_workspace/: AGENTS.md  SOUL.md
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_ai_embeddings_settings.py  0003_rag_chunks_agent_runs.py  0004_pending_summary_connectors.py  0005_pending_idempotency_connector_oauth.py  0006_gmail_mirror.py  0007_calendar_mirror.py  0008_drive_mirror.py  0009_automations.py  0010_instance_oauth_settings.py  0012_chat_artist_rework.py  (+32 more)
backend/app/: main.py  worker.py
backend/crm_ai_cockpit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/skills/: gmail-triage.md  silence-sender.md  weekly-review.md
backend/tests/: conftest.py  test_agent_connector_gating.py  test_agent_dispatch_replay.py  test_agent_memory_post_turn.py  test_agent_runtime_config.py  test_agent_tools.py  test_agent_trace_channel.py  test_ai_providers.py  test_ai_routes.py  test_alembic_version_column.py  test_api_dashboard_and_chat.py  test_auth_login.py  test_capability_registry.py  test_chat_service_default_thread.py  test_chat_thread_title_service.py  test_chat_threads_list.py  test_context_budgeting.py  test_embedding_provider_split.py  test_embedding_vector.py  test_epistemic_priority_prompt.py  test_github_client.py  test_gmail_client.py  test_gmail_routes.py  test_gmail_silence_sender.py  test_google_sheets_docs_oauth.py  test_icloud_contacts_client.py  test_icloud_drive_client.py  test_icloud_pyicloud_extras.py  test_inbound_filter_service.py  test_memory_name_persistence_causes.py  test_oauth_schemas.py  test_ranking_provider_split.py  test_scheduled_task_service.py  test_web_search_client.py  test_whatsapp_client.py  test_workspace_sandbox.py
(+416 files in other folders)
