[project]
name = "crm-ai-cockpit-backend"
version = "0.0.2"
description = "FastAPI backend for CRM + AI Cockpit MVP"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "arq>=0.26.1",
  "asyncpg>=0.30.0",
  "caldav>=1.3.9",
  "cryptography>=43.0.0",
  "httpx>=0.27.0",
  "pgvector>=0.3.6",
  "pyicloud>=2.4.1",
  # passlib 1.7.4 is incompatible with bcrypt 4.1+ / 5.x (__about__ removed; hashing errors).
  "bcrypt>=4.0.1,<4.1.0",
  "email-validator>=2.0.0",
  "fastapi>=0.115.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.6.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.17",
  "pywebpush>=2.0.0",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
